2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/alpha_composite.h (AlphaComposite): Fix alpha composite
	when both pixels contain transparency.
	* PerlMagick/demo/demo.pl: Use segmentation parameters which
	are more suitable for our image.

2008-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): CMYK copy composition
	operators automatically set the image colorspace to CMYK.
	* coders/tiff.c (WriteTIFFImage): CMYK must take precedence over
	JPEG compression.  We don't support JPEG compression in TIFF with
	CMYK.

2008-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ChannelThresholdImage): Re-implement using
	pixel iterators.  Support thresholding only the red channel by
	eliminating the switch to intensity thresholding if only one
	channel parameter is supplied.
	* coders/tiff.c (WriteTIFFImage): Don't accidentially convert CMYK
	images to RGB.
	* magick/composite.c (CompositePixels): Handle CopyBlack properly
	for CMYK images.
	* magick/command.c (CompositeImageCommand):  Support CopyCyan,
	CopyMagenta, CopyYellow, and CopyBlack.
	* magick/composite.c (CompositeImage): Preserve the canvas image
	colorspace.
	* doc/options.imdoc: Remove mention of thresholding at the channel
	level since this never worked in a useful fashion and now only
	simple intensity thresholding is available via -threshold.
	* magick/command.c (MogrifyImage): Revert to using ThresholdImage() rather
	than ChannelThresholdImage().
	* PerlMagick/Magick.xs: Revert to using ThresholdImage() rather
	than ChannelThresholdImage().

2008-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AddNoiseImage): Implemented using pixel
	iterators.
	* magick/pixel_row_iterator.c (PixelRowIterateDualNew): New pixel
	iterator.  Similar to existing PixelRowIterateDualModify except
	that this one is for when initializing a new image.

2008-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
