@@ -24,6 +24,9 @@
 2008-05-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/composite.c (CompositeImage): Automatically adjust
+        colorspace of composite image so that it is compatible with canvas
+        image.<BR>
   <LI> magick/alpha_composite.h (AlphaComposite): Fix alpha composite
         when both pixels contain transparency.
   <LI> PerlMagick/demo/demo.pl: Use segmentation parameters which
