@@ -1,5 +1,8 @@
 2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/composite.c (CompositeImage): Automatically adjust
+	colorspace of composite image so that it is compatible with canvas
+	image.
 	* magick/alpha_composite.h (AlphaComposite): Fix alpha composite
 	when both pixels contain transparency.
 	* PerlMagick/demo/demo.pl: Use segmentation parameters which
